tests/paczka2/big_fuzzy/61878251.err
Error in line 3: A723 A480 45,5
Error in line 6: A723 S140 90,9
Error in line 19: 8L9 A480 16,2
Error in line 20: 8L9 A723 82,8
Error in line 21: A723 A480 3,5
Error in line 30: 8L9 S1K0 8,K
Error in line 25: 8L9 A58 67,9
Error in line 34: SXjx S140 37,52
Error in line 26: A723 S140 71,5
Error in line 39: A723 A480 13,8
Error in line 38: UeKjt A723 75,0
Error in line 40: A723 S140 7,4
Error in line 44: A723 S140 0,4
Error in line 35: YOS A723 63,4
Error in line 49: YOS A58 12,5
Error in line 58: A723 S140 35,2
Error in line 50: YOS S140 30,2
Error in line 64: YOS A723 492,0
Error in line 57: e4Guwq3g A723 30,1
Error in line 59: A723 A58 3,0
Error in line 60: 8L9 A480 439,7
Error in line 65: YOS A480 50,9
Error in line 82: UeKjt S140 70,85
Error in line 76: UeKjt A58 59,6
Error in line 77: 8L9 S140 27,5
Error in line 88: 8L9 A58 7,6
Error in line 108: yeSqZK A58 74,2
Error in line 86: UeKjt S140 321,5
Error in line 113: SXjx A480 32,9
Error in line 124: 8L9 A58 74,4
Error in line 139: yeSqZK A480 86,1
Error in line 127: e4Guwq3g A723 47,4
Error in line 150: UeKjt S140 29,2
Error in line 149: A723 A480 18,0
Error in line 155: A723 A58 67,8
Error in line 160: A723 S140 18,7
Error in line 161: A723 A723 56,0
Error in line 138: YOS A480 31,9
Error in line 167: YOS A723 26,5
Error in line 165: A723 S140 2,9
Error in line 175: e4Guwq3g S140 5,8
Error in line 169: SXjx A58 98,7
Error in line 177: 8L9 A480 70,0
Error in line 185: e4Guwq3g A480 50,8
Error in line 183: SXjx A723 83,3
Error in line 193: SXjx S140 79,2
Error in line 200: e4Guwq3g A58 241,4
Error in line 190: UeKjt A480 23,9
Error in line 189: A723 A723 51,7
Error in line 201: e4Guwq3g S140 31,6
Error in line 211: e4Guwq3g A58 48,7
Error in line 214: SXjx A480 45,8
Error in line 204: yeSqZK A480 42,7
Error in line 229: A723 A58 79,4
Error in line 225: UeKjt A58 3,0
